@@ -1,3 +1,4 @@
+* Improve performance of Invoice.create_aeat340_records()
 * Add relate to invoices in issued and received AEAT records
 * Calculate the record_count value for operation_key C
 * Add Normal operation Operation key for invoices with one tax
